tests/baselines/reference/exportStarFromEmptyModule(target=es5).errors.txt
exportStarFromEmptyModule_module3.ts(1,15): error TS2306: File 'exportStarFromEmptyModule_module2.ts' is not a module.
exportStarFromEmptyModule_module4.ts(4,5): error TS2339: Property 'r' does not exist on type 'typeof A'.


==== exportStarFromEmptyModule_module1.ts (0 errors) ====
    export class A {
        static r;
    }
    
==== exportStarFromEmptyModule_module2.ts (0 errors) ====
    // empty
    
==== exportStarFromEmptyModule_module3.ts (1 errors) ====
    export * from "./exportStarFromEmptyModule_module2";
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2306: File 'exportStarFromEmptyModule_module2.ts' is not a module.
    export * from "./exportStarFromEmptyModule_module1";
    
    export class A {
        static q;
    }
    
==== exportStarFromEmptyModule_module4.ts (1 errors) ====
    import * as X from "./exportStarFromEmptyModule_module3";
    var s: X.A;
    X.A.q;
    X.A.r; // Error
        ~
!!! error TS2339: Property 'r' does not exist on type 'typeof A'.